feat: adicionando endpoint que retorna o conteúdo completo de uma thread, incluindo suas respostas
