# controllers/AnswerControl.js
@@ -1,4 +1,6 @@
 const Answer = require("../entities/Answer");
+const Thread = require("../entities/Thread");
+
 
 const AnswerControl = {
     async getAll(req, res) {
@@ -25,7 +27,8 @@ const AnswerControl = {
     async save(req, res) {
         /* #swagger.tags = ['Answer']
             #swagger.consumes = ['multipart/form-data']
-            #swagger.parameters['id'] = { description: 'ID da thread', required: true }
+            #swagger.parameters['boardId'] = { description: 'ID da board', required: true }
+            #swagger.parameters['threadId'] = { description: 'ID da thread', required: true }
             #swagger.parameters['image'] ={
                 in: 'formData',
                 type: 'file',
@@ -39,22 +42,27 @@ const AnswerControl = {
                 description: 'Resposta de uma thread'
             }  
         */
-        const { threadId } = req.params;
-        const user = req.user
+        const { boardId, threadId } = req.params;
         const { mensagem } = req.body;
         const arquivo = req.file ? req.file.firebaseUrl : null;
         const ip = req.headers['x-forwarded-for'] || req.connection.remoteAddress;
         try {
+            const thread = await Thread.findOne({ where: { id: threadId, boardId: boardId } });
+            if (!thread) {
+                return res.status(404).json({ message: 'ERRO: Thread não encontrada' });
+            }
+
+            const userId = req.user ? req.user.id : null;
+
             const answer = await Answer.create({
                 mensagem,
                 arquivo,
                 ip,
                 threadId: threadId,
+                userId:userId
             })
-            if (user) {
-                answer.userId = user.id;
-            }
-            return res.json(answer);
+
+            return res.status(201).json(answer);
         } catch (error) {
             res.status(500).json({
                 error: 'Erro ao salvar resposta - ' + error.message,
